# dataproc_serverless_airflow

./: Makefile  Readme.md  pyproject.toml  stocks.csv
dags/: .airflowignore  event_based_dataproc_serverless_pipeline.py
dags/utils/: cleanup.py
src/: main.py
src/dataproc_serverless_airflow/: read_file.py
